added tabs instead of menu

--- a/static/menu.html
+++ b/static/menu.html
@@ -3,10 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Menu</title>
+    <script src="../scripts/main.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-<a href="positions.html">Add position</a>
-<a href="employees.html">Add employee</a>
-<a href="restaurants.html">Add restaurant</a>
+<div class="tab">
+    <button class="tablinks" onclick="openTab('Positions')">Positions</button>
+    <button class="tablinks" onclick="openTab('Employees')">Employees</button>
+    <button class="tablinks" onclick="openTab('Restaurants')">Restaurants</button>
+</div>
+
+<div id="Positions" class="tabcontent">
+    <h3>Positions</h3>
+    <h3>Positions</h3>
+    <h3>Positions</h3>
+    <h3>Positions</h3>
+    <h3>Positions</h3>
+    <h3>Positions</h3>
+    <h3>Positions</h3>
+    <h3>Positions</h3>
+</div>
+
+<div id="Employees" class="tabcontent">
+    <h3>Employees</h3>
+    <p></p>
+</div>
+
+<div id="Restaurants" class="tabcontent">
+    <h3>Restaurants</h3>
+    <p></p>
+</div>
 </body>
 </html>
