positions api fully done

--- a/static/html/menu.html
+++ b/static/html/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Main Menu</title>
     <script src="../scripts/main.js"></script>
-    <link rel="stylesheet" href="../css/main.css">
+    <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
 <div class="tab">
@@ -13,7 +13,7 @@
     <button class="tablinks" onclick="openTab('Restaurants')">Restaurants</button>
 </div>
 
-<div id="Positions" class="tabcontent">
+<div class="tabcontent" id="Positions">
     <h3>Positions</h3>
     <h3>Positions</h3>
     <h3>Positions</h3>
@@ -24,12 +24,12 @@
     <h3>Positions</h3>
 </div>
 
-<div id="Employees" class="tabcontent">
+<div class="tabcontent" id="Employees">
     <h3>Employees</h3>
     <p></p>
 </div>
 
-<div id="Restaurants" class="tabcontent">
+<div class="tabcontent" id="Restaurants">
     <h3>Restaurants</h3>
     <p></p>
 </div>
